== 0.1 (28.09.2012):
- Initial release.

== 0.1.1 (01.10.2012):
- Fixed infinite loop with -O2.

== 0.1.2 (25.10.2012):
- Fixed controls names sometimes not displayed on 32bit systems.
- Added 1/2/3/4/5 as synonym for F1/F2/F3/F4/F5 (by @arandomuser).
- Properly removing observers from notification center.

== 0.1.3:
- Fixed controls sometimes displaying wrong values at start.
- Fixed Monitor controls changing monitored sink values.

== 0.2: